--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/locutus": "^0.0.6",
 		"@types/node": "^18.11.9",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"eslint": "^8.0.1",
@@ -25,6 +26,9 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"babel-preset-php": "^2.0.0"
+		"assert": "^2.0.0",
+		"babel-preset-php": "^2.0.0",
+		"locutus": "^2.0.16",
+		"xregexp": "^5.1.1"
 	}
 }
